src/BaseBundle/Resources/scss/app.scss
@import "variables";
@import "bootstrap";
@import "admin";
@import "font-awesome";
@import "../public/vendor/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min";
@import "../public/vendor/select2/dist/css/select2";

.panel {
  box-shadow: 0px 3px 2px #aab2bd;
}

.modal-content {
  border: none;
}

.media-listing {
  img {
    max-width: 200px;
  }
}

.pagination {
  margin-top: 0;
}

.pagination-counter {
  p {
    font-weight: bold;
  }
}

.collection {
  .link-actions {
    a {
      float: right;
    }
  }
}

